2011-04-18  Hendrik Tews <prooftree@askra.de>

	* release version 0.1

2011-04-18  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* undo release
	* makefile fix

2011-04-18  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* minor

2011-04-18  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* make-bundle changes

2011-04-18  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* small improvements

2011-04-18  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* various README's, make-bundle

2011-04-18  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* GPL 3

2011-04-18  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* configure

2011-04-15  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* fix bug with new subgoals and their order

2011-04-15  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* scroll sequent window to bottom

2011-04-15  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* redesign communication protocol (send complete states
	  now)
	* fix idle proof command problem

2011-04-13  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* privatized non-public methods
	* some module interface restrictions

2011-04-13  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* license

2011-04-13  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* truncate long proof commands

2011-04-12  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* fix undo for unaffected proofs

2011-04-12  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* states and proper undo
	* proper proof finish

2011-04-06  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* mouse button 1
	* current/selected node drawing
	* use of sequent window

2011-04-05  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* parsing input, first version of communication protocol
	* reposition to current node
	* colors

